RESOLVED FIXED146497
REGRESSION (r184296): View keeps scrolling upward
https://bugs.webkit.org/show_bug.cgi?id=146497
Summary REGRESSION (r184296): View keeps scrolling upward
Brent Fulgham
Reported 2015-06-30 23:57:32 PDT
The change in <http://trac.webkit.org/changeset/184296> introduced a regression on certain sites that handle scrolling manually. The change in r184296 was designed to make sure that the logic to notify scroll bars that they should re-hide was not bypassed when the wheel event had zero movement, which is typical for "end scroll" state. Unfortunately, on certain sites this had the undesirable side-effect of triggering a programmatic scroll event in JavaScript at the end of the gesture. I'm working on a reduced test case for this behavior, but I have a fix for the web page showing the problem.
Attachments
Patch (4.58 KB, patch)
2015-07-01 00:04 PDT, Brent Fulgham
darin: review+
Brent Fulgham
Comment 1 2015-06-30 23:58:34 PDT
Brent Fulgham
Comment 2 2015-07-01 00:04:36 PDT
Brent Fulgham
Comment 3 2015-07-01 12:30:28 PDT
Note You need to log in before you can comment on or make changes to this bug.